trying to fix hero content on IE

--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -46,7 +46,6 @@
 .hero-content {
   width: 55%;
   max-width: 920px;
-  border:5px solid blue;
   margin: 0 auto;
   display: flex;
   flex-flow: column;
@@ -73,6 +72,8 @@
     padding-top:10px;
     margin-top: 5px;
     font-size: 1.25rem;
+    max-width: 920px;
+    margin: 0 auto;
   }
 }
 
